--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/all.css">
     <link rel="stylesheet" href="./main2.css">
     <title>MrakSvet - три четверти</title>
+    <meta name="og:description" content="Новый релиз MrakSvet - Три четверти, слушай на всех площадках." />
+    <meta name="og:title" content="MrakSvet - Три четверти" />
+    <meta name="og:image" content="https://blessedaim.github.io/releasepage/img/tri4_final_1000x1000.jpg" />
 </head>
 <body>
     <div id="background"></div>
