--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./css/all.css">
     <link rel="stylesheet" href="./main2.css">
     <title>MrakSvet - три четверти</title>
-    <meta name="og:description" content="Новый релиз MrakSvet - Три четверти, слушай на всех площадках." />
-    <meta name="og:title" content="MrakSvet - Три четверти" />
-    <meta name="og:image" content="https://blessedaim.github.io/releasepage/img/tri4_final_1000x1000.jpg" />
+    <meta property="og:description" content="Новый релиз MrakSvet - Три четверти, слушай на всех площадках." />
+    <meta property="og:title" content="MrakSvet - Три четверти" />
+    <meta property="og:image" content="https://blessedaim.github.io/releasepage/img/tri4_final_1000x1000.jpg" />
+    <meta property="og:url" content="https://blessedaim.github.io/releasepage/" />
 </head>
 <body>
     <div id="background"></div>
