Updating meta again
it does what it says

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./main2.css">
     <title>MrakSvet - три четверти</title>
     <meta property="og:description" content="Новый релиз MrakSvet - Три четверти, слушай на всех площадках." />
+    <meta name="description" content="Новый релиз MrakSvet - Три четверти, слушай на всех площадках." />
     <meta property="og:title" content="MrakSvet - Три четверти" />
-    <meta property="og:image" content="https://blessedaim.github.io/releasepage/img/tri4_final_1000x1000.jpg" />
+    <meta property="og:image" itemprop="image" content="https://blessedaim.github.io/releasepage/img/tri4_final_1000x1000.jpg" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
     <meta property="og:url" content="https://blessedaim.github.io/releasepage/" />
 </head>
 <body>
